<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/pet_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/cat_cope_launcher"
            app:layout_constraintBottom_toTopOf="@id/information_section"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

    <LinearLayout
            android:id="@+id/information_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude_label"
            />
            <TextView
                    android:id="@+id/latitude_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude_label"
            />
            <TextView
                    android:id="@+id/longitude_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_label"
            />
            <TextView
                    android:id="@+id/sunrise_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset_label"
            />
            <TextView
                    android:id="@+id/sunset_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

        <TextView
                android:text="@string/seekbar_bar_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
        />

        <TextView
                android:id="@+id/progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="6"
        />

        <SeekBar android:id="@+id/seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="10"
                 android:indeterminate="false"
                 android:progress="5"
        />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>